Remove supressNextClick JavaScript.

Calling supressNextClick is no longer necessary (as of at least iOS
10.0) to prevent navigation in the web view when presenting a context
menu. |suppressNextClick| was incorreclty disabling the next touch after
a context menu was canceled.

TEST=No side effects after showing context menu

Bug: 806737
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I40bd1e58a41a2fcab9985a436711da626800e718
Reviewed-on: https://chromium-review.googlesource.com/1228501
Reviewed-by: Eugene But <eugenebut@chromium.org>
Commit-Queue: Mike Dougherty <michaeldo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592452}
Former-commit-id: cc7b9c6822f296b79bd26587379ee74120211bb6